Carme-Frontend/Carme-Django/static/css/style.css
/* ... */
.nav-tabs .nav-item .nav-link{
  background-color: var(--carme-tab-bg)!important;
}

.nav-tabs .nav-link.active,
.nav-tabs .nav-item.show .nav-link {
  background-color: var(--carme-tab-bg);;
  border-color: var(--carme-tab-border) var(--carme-tab-border) var(--carme-card-bg)!important;
}

.nav-tabs .nav-item .nav-link:hover {
  background-color: var(--carme-tab-bg);
  border-top-color: var(--carme-tab-border-hover);
  border-right-color: var(--carme-tab-border-hover);
  border-bottom-color: transparent;
  border-left-color: var(--carme-tab-border-hover);
  -webkit-box-shadow: var(--carme-tab-shadow);
  box-shadow: var(--carme-tab-shadow); 
}

/* highchart */
.option-chart {
  display: none;
}
.highcharts-legend-item path.highcharts-graph {
	display: none;
}


/*--------------------------------------------------*/
/*               Jobs Card - Dashboard              */
/*--------------------------------------------------*/

/*--- fraction ---*/
span.frac {
  display: inline-block;
  font-size: 100%;
  text-align: center;
}
span.frac > sup {
  display: block;
  border-bottom: 1px solid;
  margin-top: 0px;
  font: inherit;
  top: 0px;
}
span.frac > span {
  display: none;
}
span.frac > sub {
  display: block;
  font: inherit;
  bottom: 0px
}

/*--- button ---*/
.btn-outline-secondary.custom-btn {
	background-color: var(--carme-btn-bg);
  border-color: var(--carme-btn-border);
  box-shadow: var(--carme-btn-shadow);
}
.btn-outline-secondary.custom-btn:active, 
.btn-outline-secondary.custom-btn.active {
	box-shadow: none !important;
}
.btn-outline-secondary.custom-btn:focus, 
.btn-outline-secondary.custom-btn.focus {
  background-color:var(--carme-btn-bg);
  border-color: var(--carme-btn-border);
  box-shadow: var(--carme-btn-shadow);
}
.btn-outline-secondary.custom-btn:not(:disabled):not(.disabled):active:focus{
  background-color:var(--carme-btn-bg-hover);
  color:var(--carme-btn-text-hover);
  border-color:var(--carme-btn-bg);
}
.btn-outline-secondary.custom-btn:not(:disabled):not(.disabled).active.focus{
  background-color:var(--carme-btn-bg-hover);
  color:var(--carme-btn-text-hover);
  border-color:var(--carme-btn-bg);}

/*--- progress bar ---*/
.progress {
  background-color: var(--carme-progress-bar-bg);
  border: 1px solid var(--carme-progress-bar-border);
  box-shadow: var(--carme-progress-bar-shadow);  
}
.progress-bar.bg-used{
  background: var(--carme-blue); 
}
.progress-bar.bg-queued{
  background: var(--carme-black);
}
.progress-bar.bg-cpu{
  background: var(--carme-orange);
}


/*--------------------------------------------------*/
/*                 Overlayscrollbar                 */
/*--------------------------------------------------*/

.scrollbar-overlay {
  overflow: hidden!important;
  visibility: hidden!important;
}
.scrollbar {
  visibility: hidden!important;
}
.scrollbar:hover,.scrollbar-overlay:hover {
  visibility: visible!important;
}
.scrollbar::-webkit-scrollbar {
  visibility: hidden!important;
  -webkit-appearance: none;
  width: 6px;
  height: 6px;
  background-color: transparent;
}
.scrollbar::-webkit-scrollbar-thumb {
  visibility: hidden!important;
  border-radius: 3px;
  background-color: rgba(255, 255, 255, 0.4);
}
.scrollbar:hover::-webkit-scrollbar, .scrollbar:hover::-webkit-scrollbar-thumb, .scrollbar:focus::-webkit-scrollbar, .scrollbar:focus::-webkit-scrollbar-thumb {
  visibility: visible!important;
}

.navbar-vibrant .scrollbar {
  overflow: auto;
}
.navbar-vibrant .scrollbar::-webkit-scrollbar {
  visibility: hidden;
  -webkit-appearance: none;
  width: 6px;
  height: 6px;
  background-color: transparent;
}
.navbar-vibrant .scrollbar::-webkit-scrollbar-thumb {
  visibility: hidden;
  border-radius: 3px;
  background-color: rgba(255, 255, 255, 0.4);
}
.navbar-vibrant .scrollbar:hover::-webkit-scrollbar, .navbar-vibrant .scrollbar:hover::-webkit-scrollbar-thumb, .navbar-vibrant .scrollbar:focus::-webkit-scrollbar, .navbar-vibrant .scrollbar:focus::-webkit-scrollbar-thumb {
  visibility: visible;
}

.firefox .scrollbar {
  overflow: auto !important;
  scrollbar-color: rgba(255, 255, 255, 0.4) transparent; /*var(--carme-scrollbar-bg)*/
  scrollbar-width: thin;
}
.firefox .navbar-vibrant .scrollbar {
  overflow: auto !important;
  scrollbar-color: rgba(255, 255, 255, 0.4) transparent;
  scrollbar-width: thin;
}

.os-theme-dark > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
  border-radius:0;
  background-color: rgba(var(--carme-dark-rgb),0.12)!important;
}
.os-theme-dark > .os-scrollbar:hover > .os-scrollbar-track > .os-scrollbar-handle, .os-theme-dark > .os-scrollbar:focus > .os-scrollbar-track > .os-scrollbar-handle {
  background: rgba(182, 193, 210, 0.55);
}


/*--------------------------------------*/
/*                Extras                */
/*--------------------------------------*/


/* 403 unauthorized Error */
.error-template {
   padding: 40px 15px;
   text-align: center;
}
.error-actions {
   margin-top:15px;
   margin-bottom:15px;
}
.error-actions .btn {
   margin-right:10px;  
}

/* wiki page */
/* ovewrites sidebar class in wiki-bootstrap.min.css */
.wiki-article div.article-list {
  max-width: none;
}  
/* ovewrites <pre> class in wiki-bootstrap.min.css */
.wiki-article pre{
  max-width: none;
}


/*--------------------------------------------------*/
/*                     Projects                     */
/*--------------------------------------------------*/
.avatar-icon {
  height: 2.5rem;
  width:  2.5rem;
}
.avatar-icon .avatar-name {
  background-color: var(--carme-avatar-bg);
}
.option-template{
  display:none;
}
.border-dashed-bottom {
  border-bottom: 1px dashed var(--carme-border)!important;
}
 

